hero banner update for better image present

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-
+  border: saddlebrown solid 2px;
 }
 
 ::-webkit-scrollbar {
@@ -112,10 +112,10 @@ body {
     height: 300px;
   }
 
-.react-horizontal-scrolling-menu--scroll-container{
-   display: flex;
-}
 
+  .react-horizontal-scrolling-menu--scroll-container {
+    width: 500px;
+  }
 
   .left-arrow,
   .right-arrow {
@@ -140,4 +140,5 @@ body {
 @media screen and (max-width:400px) {
   .exercise-card {
     width: 280px;
-  }}
+  }
+}
