--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,13 @@ body {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
+
 }
 
 ::-webkit-scrollbar {
   width: 0px;
 }
-.css-0{
-   width: 100%;
-}
+
 .right-arrow,
 .left-arrow {
   cursor: pointer;
@@ -113,10 +112,10 @@ body {
     height: 300px;
   }
 
-.react-horizontal-scrolling-menu--scroll-container{
-   display: flex;
-}
 
+  .react-horizontal-scrolling-menu--scroll-container {
+    width: 500px;
+  }
 
   .left-arrow,
   .right-arrow {
@@ -141,4 +140,5 @@ body {
 @media screen and (max-width:400px) {
   .exercise-card {
     width: 280px;
-  }}
+  }
+}
